# drexel-scraper

./: .coverage  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  QUARTER_AUTOMATION.md  README.md  config.py  create_tables.sql  data.json  db.py  db_config.py  docker-compose.yml  emailer.py  helpers.py  main.py  parse.py  pyproject.toml  ratings.py  ratings_cache.json  requirements.txt  reset_db.bash  scrape.py  trash.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build_and_deploy.yml  functional_test.yml  scrape_data.yml  scrape_data_cronjob.yml  update_dev_db.yml
cache/: credits_cache.json  extra_course_data_cache.json  ratings_cache.json
config/: attributes.py  buttons.py  partial_href_attributes.py  partial_links.py  urls.py
k8s/: README.md  cronjob-configmap-default.yaml  cronjob-configmap-dev.yaml  cronjob-configmap-prod.yaml  cronjob.yaml  delete-credits-cronjob.yaml  delete-ratings-cronjob.yaml  grafana-default-ingress.yaml  grafana-default-values.yaml  grafana-dev-ingress.yaml  grafana-dev-values.yaml  performance-pvc.yaml  postgres-configmap.yaml  pvc1.yaml  ratings-pvc.yaml
k8s/drexel-scraper/: Chart.yaml  values-default.yaml  values-dev.yaml
k8s/drexel-scraper/templates/: aws-configmap.yaml  cronjob-configmap.yaml  cronjob.yaml  delete-credits-cronjob.yaml  delete-extra-course-data-cronjob.yaml  delete-ratings-cronjob.yaml  grafana-ingress.yaml  shared-pvc.yaml
performance/: analyze.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/4/: 2619
postgres-data/base/5/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  16388  16389  16389_fsm  16389_vm  16394  16395  16397  16399  16399_fsm  16399_vm  16403  16404  16406  16406_fsm  16406_vm  16409  2224  2579  2604  2606  2606_vm  2608  2608_vm  2610  2610_fsm  2610_vm  2618  2618_vm  2619  2619_fsm  2619_vm  2620  2656  2657  (+28 more)
postgres-data/global/: 1260  1262  2396  2671  pg_control  pg_internal.init
sns-init-scripts/: create-sns-topic.sh
src/: config.py  db.py  emailer.py  grafana_queries.sql  helpers.py  login.py  main.py  parse.py  quarter_utils.py  ratings.py  scrape.py  totp.py
src/drexel_scraper/: __main__.py  config.py  db.py  db_config.py  emailer.py  helpers.py  login.py  parse.py  ratings.py  scrape.py  totp.py
src/drexel_scraper/models/: result.py
tests/: test_config.py  test_quarter_utils.py
tests/unit/: test_config.py
tms-scraper/: README.md  data.json  main.py  scrape.py
