[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/drexel_scraper"]

[project]
name = "drexel-scraper"
dynamic = ["version"]
description = 'Scrape data from Drexel Term Master Schedule and save it to a JSON file.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["drexel", "scraper", "term-master-schedule", "tms"]
authors = [
{ name = "Zohair-coder", email = "zohair.ul.hasan@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beautifulsoup4==4.12.3",
  "psycopg2-binary==2.9.9",
  "requests==2.31.0",
  "boto3==1.34.69",
  "pytz==2024.1",
  "ConfigArgParse==1.7",
]

[project.scripts]
drexelscraper = "drexel_scraper.__main__:main"

[project.urls]
Documentation = "https://github.com/zohair-coder/drexel-scraper#readme"
Issues = "https://github.com/zohair-coder/drexel-scraper/issues"
Source = "https://github.com/zohair-coder/drexel-scraper"

[tool.hatch.version]
path = "src/drexel_scraper/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "beautifulsoup4==4.12.3",
  "psycopg2-binary==2.9.9",
  "requests==2.31.0",
  "boto3==1.34.69",
  "pytz==2024.1",
  "ruff==0.3.4",
  "mypy==1.9.0",
  "types-beautifulsoup4==4.12.0.20240229",
  "types-psycopg2==2.9.21.20240311",
  "types-requests==2.31.0.20240311",
  "types-pytz==2024.1.0.20240203",
  "boto3-stubs==1.34.69",
  "coverage[toml]>=6.5",
  "pytest"
]

[tool.hatch.envs.default.scripts]
start = "python3 -m drexel_scraper"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["drexel_scraper"]
branch = true
parallel = true
omit = [
  "src/drexel_scraper/__about__.py",
]

[tool.coverage.paths]
drexel_scraper = ["src/drexel_scraper", "*/drexel_scraper/src/drexel_scraper"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
